feat: reject overlapping showtimes
